# telegram-briefing-mcp

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
src/telegram_briefing_mcp/: __init__.py  auth.py  briefing.py  cli.py  client.py  config.py  server.py  sessionstore.py  windows.py
tests/: test_briefing_helpers.py  test_windows.py
