[project]
name = "telegram-briefing-mcp"
version = "0.1.0"
description = "Read-only Telegram connector exposed as an MCP server: pull messages by time window (last day/week, today, unread) across your chats and assemble an executive briefing. Uses the MTProto user API (Telethon) — the same way Telegram Web connects — so it sees your real conversations, not just bot chats."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Zain Bacchus" }]
keywords = ["telegram", "mcp", "model-context-protocol", "briefing", "claude", "mtproto", "telethon"]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Communications :: Chat",
    "Typing :: Typed",
]
dependencies = [
    "mcp>=1.2.0",
    "telethon>=1.36",
    "keyring>=25",
    "cryptography>=42",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = ["pytest>=8"]

[project.urls]
Homepage = "https://github.com/zainbacchus/telegram-briefing-mcp"
Repository = "https://github.com/zainbacchus/telegram-briefing-mcp"
Issues = "https://github.com/zainbacchus/telegram-briefing-mcp/issues"

[project.scripts]
telegram-briefing-mcp = "telegram_briefing_mcp.server:main"
telegram-auth = "telegram_briefing_mcp.auth:cli_main"
telegram-brief = "telegram_briefing_mcp.cli:cli_main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/telegram_briefing_mcp"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
